[BUG] Floating header menu had the bottom cut off on mobile browsers

--- a/styles/components/common/floatingHeader.module.scss
+++ b/styles/components/common/floatingHeader.module.scss
@@ -1,5 +1,5 @@
 .fuel-index-menu {
-    height: calc(100vh - 60px);
+    height: calc(100% - 60px);
 }
 
 .fuel-nav-container:not([data-scroll='0']) {
